--- a/Solutions/Threat Intelligence/Analytic Rules/EmailEntity_CloudAppEvents.yaml
+++ b/Solutions/Threat Intelligence/Analytic Rules/EmailEntity_CloudAppEvents.yaml
@@ -2,6 +2,20 @@ id: 47b9bb10-d216-4359-8cef-08ca2c67e5be
 name: Preview - TI map Email entity to Cloud App Events
 description: |
    'We use threat intelligence to identify compromises and attacks and detect malicious activities in one's email entity.'
+severity: Medium
+requiredDataConnectors:
+  - connectorId: MicrosoftThreatProtection
+    dataTypes:
+      - CloudAppEvents
+  - connectorId: MicrosoftDefenderThreatIntelligence
+    dataTypes:
+      - ThreatIntelligenceIndicator
+queryFrequency: 1h
+queryPeriod: 14d
+triggerOperator: gt
+triggerThreshold: 0
+tactics:
+  - Privilege Escalation
 query: |
   let dt_lookBack = 10d;
   let ioc_lookBack = 30d;
@@ -21,3 +35,16 @@ query: |
   | summarize CloudAppEvents_TimeGenerated = argmax(CloudAppEvents_TimeGenerated, *) by IndicatorId, User_id
   | extend Name = tostring(split(User_id, '@', 0)[0]), UPNSuffix = tostring(split(User_id, '@', 1)[0])
   | extend timestamp = CloudAppEvents_TimeGenerated
+entityMappings:
+  - entityType: Account
+    fieldMappings:
+      - identifier: DisplayName
+        columnName: UserAddedName
+      - identifier: ObjectGuid
+        columnName: UserAddedObjectId
+      - identifier: ObjectGuid
+        columnName: PerformedByObjectId
+      - identifier: DisplayName
+        columnName: PerformedByDisplayName
+version: 1.0.0
+kind: Scheduled
