--- a/Solutions/Threat Intelligence/Analytic Rules/IPEntity_CloudAppEvents.yaml
+++ b/Solutions/Threat Intelligence/Analytic Rules/IPEntity_CloudAppEvents.yaml
@@ -2,6 +2,20 @@ id: 4e0a6fc8-697e-4455-be47-831b41ea91ac
 name: Preview - TI map IP entity to Cloud App Events
 description: |
    'We use threat intelligence to identify compromises and attacks and detect malicious activities in one's IP entity.'
+severity: Medium
+requiredDataConnectors:
+  - connectorId: MicrosoftThreatProtection
+    dataTypes:
+      - CloudAppEvents
+  - connectorId: MicrosoftDefenderThreatIntelligence
+    dataTypes:
+      - ThreatIntelligenceIndicator
+queryFrequency: 1h
+queryPeriod: 14d
+triggerOperator: gt
+triggerThreshold: 0
+tactics:
+  - Privilege Escalation
 query: |
   let dt_lookBack = 1d;
   let ioc_lookBack = 14d; 
@@ -34,4 +48,16 @@ query: |
           NetworkSourceIP = max_CloudAppEvents_TimeGenerated_NetworkSourceIP,
           EmailSourceIPAddress = max_CloudAppEvents_TimeGenerated_EmailSourceIpAddress
       | project CloudAppEventsTimeGenerated, Description, ActivityGroupNames, IndicatorId, ThreatType, ExpirationDateTime, ConfidenceScore, TI_ipEntity, NetworkDestinationIP, NetworkSourceIP, EmailSourceIPAddress
+entityMappings:
+  - entityType: Account
+    fieldMappings:
+      - identifier: DisplayName
+        columnName: UserAddedName
+      - identifier: ObjectGuid
+        columnName: UserAddedObjectId
+      - identifier: ObjectGuid
+        columnName: PerformedByObjectId
+      - identifier: DisplayName
+        columnName: PerformedByDisplayName
 version: 1.0.0
+kind: Scheduled
