--- a/Solutions/Threat Intelligence/Analytic Rules/URLEntity_CloudAppEvents.yaml
+++ b/Solutions/Threat Intelligence/Analytic Rules/URLEntity_CloudAppEvents.yaml
@@ -2,6 +2,20 @@ id: e8ae92dd-1d41-4530-8be8-85c5014c7b47
 name: Preview - TI map URL entity to Cloud App Events
 description: |
    'We use threat intelligence to identify compromises and attacks and detect malicious activities in one's URL entity.'
+severity: Medium
+requiredDataConnectors:
+  - connectorId: MicrosoftThreatProtection
+    dataTypes:
+      - CloudAppEvents
+  - connectorId: MicrosoftDefenderThreatIntelligence
+    dataTypes:
+      - ThreatIntelligenceIndicator
+queryFrequency: 1h
+queryPeriod: 14d
+triggerOperator: gt
+triggerThreshold: 0
+tactics:
+  - Privilege Escalation
 query: |
   let dt_lookBack = 1h;
   let ioc_lookBack = 14d;
@@ -18,3 +32,16 @@ query: |
     | summarize CloudApps_TimeGenerated = argmax(CloudApps_TimeGenerated, *) by IndicatorId, Url
     | extend Description = max_CloudApps_TimeGenerated_Description, ActivityGroupNames = max_CloudApps_TimeGenerated_ActivityGroupNames, ThreatType = max_CloudApps_TimeGenerated_ThreatType, ExpirationDateTime = max_CloudApps_TimeGenerated_ExpirationDateTime, ConfidenceScore = max_CloudApps_TimeGenerated_ConfidenceScore
     | project CloudApps_TimeGenerated, Description, IndicatorId, ThreatType, ExpirationDateTime, ConfidenceScore
+entityMappings:
+  - entityType: Account
+    fieldMappings:
+      - identifier: DisplayName
+        columnName: UserAddedName
+      - identifier: ObjectGuid
+        columnName: UserAddedObjectId
+      - identifier: ObjectGuid
+        columnName: PerformedByObjectId
+      - identifier: DisplayName
+        columnName: PerformedByDisplayName
+version: 1.0.0
+kind: Scheduled
