--- a/Solutions/Threat Intelligence/Analytic Rules/EmailEntity_CloudAppEvents.yaml
+++ b/Solutions/Threat Intelligence/Analytic Rules/EmailEntity_CloudAppEvents.yaml
@@ -39,12 +39,10 @@ entityMappings:
   - entityType: Account
     fieldMappings:
       - identifier: DisplayName
-        columnName: UserAddedName
-      - identifier: ObjectGuid
-        columnName: UserAddedObjectId
-      - identifier: ObjectGuid
-        columnName: PerformedByObjectId
-      - identifier: DisplayName
-        columnName: PerformedByDisplayName
+        columnName: Name
+      - identifier: AadUserId
+        columnName: User_Id
+      - identifier: UPNSuffix
+        columnName: UPNSuffix
 version: 1.0.0
 kind: Scheduled
