--- a/Solutions/Threat Intelligence/Analytic Rules/FileHashEntity_CloudAppEvents.yaml
+++ b/Solutions/Threat Intelligence/Analytic Rules/FileHashEntity_CloudAppEvents.yaml
@@ -36,23 +36,19 @@ query: |
     | extend Description = max_CloudAppEvents_TimeGenerated_Description, ActivityGroupNames = max_CloudAppEvents_TimeGenerated_ActivityGroupNames, ThreatType = max_CloudAppEvents_TimeGenerated_ThreatType, ExpirationDateTime = max_CloudAppEvents_TimeGenerated_ExpirationDateTime, ConfidenceScore = max_CloudAppEvents_TimeGenerated_ConfidenceScore, SourceIP = max_CloudAppEvents_TimeGenerated_NetworkSourceIP, SourcePort = max_CloudAppEvents_TimeGenerated_NetworkSourcePort, DestinationIP = max_CloudAppEvents_TimeGenerated_NetworkDestinationIP, DestinationPort = max_CloudAppEvents_TimeGenerated_NetworkDestinationPort, DeviceName = max_CloudAppEvents_TimeGenerated_DeviceName
     | project CloudAppEvents_TimeGenerated, Description, ActivityGroupNames, IndicatorId, ThreatType, ExpirationDateTime, ConfidenceScore, SourceIP, SourcePort, DestinationIP, DestinationPort, DeviceName, FileHash
 entityMappings:
-  - entityType: Account
+  - entityType: IP
     fieldMappings:
-      - identifier: DisplayName
-        columnName: UserAddedName
-      - identifier: ObjectGuid
-        columnName: UserAddedObjectId
-      - identifier: ObjectGuid
-        columnName: PerformedByObjectId
-      - identifier: DisplayName
-        columnName: PerformedByDisplayName
-  - entityType: File
-    fieldMappings:
-      - identifier: Name
-        columnName: FileName
+      - identifier: Address
+      - columnName: SourceIP
+      - identifier: Address
+      - columnName: DestinationIP
   - entityType: Host
     fieldMappings:
       - identifier: HostName
         columnName: DeviceName
+  - entityType: FileHash
+    fieldMappings:
+      - identifier: Algorithm+Value
+        columnName: FileHash
 version: 1.0.0
 kind: Scheduled
